--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div class="col-12 col-md-5 categories">
                     <img src="./images/food_bowls.jpg"  height="300" alt="image of millets" class="image-categories">
-                    <a href="millets.html" class="cat-name"><h2>Fuit Bowls</h2></a>
+                    <a href="millets.html" class="cat-name"><h2>Fruit Bowls</h2></a>
                 </div>
 
                 <div class="col-12 col-md-5 categories">
@@ -82,15 +82,15 @@
                 
                 <div class="col-12 col-md-4">
                     <h2>Quality</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima deserunt, sit iure voluptates suscipit ratione porro unde a, numquam quisquam excepturi iste id illo repellendus, quo impedit expedita quos pariatur?</p>
+                    <p>Organic food is often considered healthier due to the absence of synthetic pesticides, GMOs, and antibiotics. It supports sustainable farming practices, promoting biodiversity, soil health, and better nutrient profiles.</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h2>Experience</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla quaerat repellendus earum magnam quidem nesciunt labore fugit quas rem culpa amet neque praesentium nobis, animi beatae, repudiandae dolores itaque porro.</p>
+                    <p>The experience of organic food feels fresher, more flavorful, and natural. Knowing it's grown without chemicals adds a sense of trust, while supporting sustainable farming fosters a deeper connection to the earth.</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h2>Purity</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum doloribus doloremque fuga debitis eveniet recusandae omnis porro voluptatum, odit perferendis esse voluptas, modi eos praesentium odio exercitationem, mollitia reprehenderit tempora.</p>
+                    <p>Organic food represents purity by being free from synthetic pesticides, herbicides, and GMOs. Its natural cultivation ensures fewer contaminants, offering a clean, wholesome choice that aligns with nature's processes.</p>
                 </div>
             </div>
         </div>
